[package]
name = "repx-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
repx-common = { path = "../repx-common" }

[[bin]]
name = "repx-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 2
debug = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 2
debug = false
lto = true
panic = "abort"
codegen-units = 1
