[package]
name = "repx"
version = "0.1.0"
edition = "2021"
description = "Reproducible process attestations for supply chain security"
license = "MIT"

[dependencies]
repx-common = { path = "../repx-common", features = ["user"] }
aya = "0.13"
aya-log = "0.2"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["process", "signal"] }
anyhow = "1"
